src/cel/parser/CELParser.java
// Generated from CEL.g4 by ANTLR 4.7.1
package cel.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CELParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, K_ALL = 13, K_AND = 14, K_ANY = 15, K_AS = 16, K_BY = 17,
            K_CONSUME = 18, K_DECLARE = 19, K_DISTINCT = 20, K_EVENT = 21, K_EVENTS = 22, K_FILTER = 23,
            K_FROM = 24, K_HOURS = 25, K_IN = 26, K_LAST = 27, K_LIKE = 28, K_MAX = 29, K_MINUTES = 30,
            K_NEXT = 31, K_NONE = 32, K_NOT = 33, K_OR = 34, K_PARTITION = 35, K_SECONDS = 36,
            K_SELECT = 37, K_STREAM = 38, K_STRICT = 39, K_UNLESS = 40, K_WHERE = 41, K_WITHIN = 42,
            PERCENT = 43, PLUS = 44, MINUS = 45, STAR = 46, SLASH = 47, SEMICOLON = 48, LE = 49,
            LEQ = 50, GE = 51, GEQ = 52, EQ = 53, NEQ = 54, IDENTIFIER = 55, NUMERIC_LITERAL = 56,
            INTEGER_LITERAL = 57, NUMERICAL_EXPONENT = 58, STRING_LITERAL = 59, SINGLE_LINE_COMMENT = 60,
            MULTILINE_COMMENT = 61, SPACES = 62, UNEXPECTED_CHAR = 63;
    public static final int
            RULE_parse = 0, RULE_error = 1, RULE_cel_stmt = 2, RULE_cel_declaration = 3,
            RULE_event_declaration = 4, RULE_attribute_dec_list = 5, RULE_attribute_declaration = 6,
            RULE_datatype = 7, RULE_stream_declaration = 8, RULE_event_list = 9, RULE_cel_query = 10,
            RULE_selection_strategy = 11, RULE_stream_list = 12, RULE_result_values = 13,
            RULE_cel_pattern = 14, RULE_partition_list = 15, RULE_attribute_list = 16,
            RULE_consumption_policy = 17, RULE_filter = 18, RULE_bool_expr = 19, RULE_string_literal = 20,
            RULE_math_expr = 21, RULE_value_seq = 22, RULE_number_seq = 23, RULE_string_seq = 24,
            RULE_time_window = 25, RULE_event_span = 26, RULE_time_span = 27, RULE_hours = 28,
            RULE_minutes = 29, RULE_seconds = 30, RULE_s_event_name = 31, RULE_event_name = 32,
            RULE_stream_name = 33, RULE_attribute_name = 34, RULE_number = 35, RULE_string = 36,
            RULE_any_name = 37, RULE_keyword = 38;
    public static final String[] ruleNames = {
            "parse", "error", "cel_stmt", "cel_declaration", "event_declaration",
            "attribute_dec_list", "attribute_declaration", "datatype", "stream_declaration",
            "event_list", "cel_query", "selection_strategy", "stream_list", "result_values",
            "cel_pattern", "partition_list", "attribute_list", "consumption_policy",
            "filter", "bool_expr", "string_literal", "math_expr", "value_seq", "number_seq",
            "string_seq", "time_window", "event_span", "time_span", "hours", "minutes",
            "seconds", "s_event_name", "event_name", "stream_name", "attribute_name",
            "number", "string", "any_name", "keyword"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'('", "')'", "','", "'int'", "'string'", "'double'", "'long'",
            "'['", "']'", "'{'", "'}'", "'..'", null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            "'%'", "'+'", "'-'", "'*'", "'/'", "';'", "'<'", "'<='", "'>'", "'>='"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, "K_ALL", "K_AND", "K_ANY", "K_AS", "K_BY", "K_CONSUME", "K_DECLARE",
            "K_DISTINCT", "K_EVENT", "K_EVENTS", "K_FILTER", "K_FROM", "K_HOURS",
            "K_IN", "K_LAST", "K_LIKE", "K_MAX", "K_MINUTES", "K_NEXT", "K_NONE",
            "K_NOT", "K_OR", "K_PARTITION", "K_SECONDS", "K_SELECT", "K_STREAM", "K_STRICT",
            "K_UNLESS", "K_WHERE", "K_WITHIN", "PERCENT", "PLUS", "MINUS", "STAR",
            "SLASH", "SEMICOLON", "LE", "LEQ", "GE", "GEQ", "EQ", "NEQ", "IDENTIFIER",
            "NUMERIC_LITERAL", "INTEGER_LITERAL", "NUMERICAL_EXPONENT", "STRING_LITERAL",
            "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "CEL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public CELParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ParseContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(CELParser.EOF, 0);
        }

        public List<Cel_stmtContext> cel_stmt() {
            return getRuleContexts(Cel_stmtContext.class);
        }

        public Cel_stmtContext cel_stmt(int i) {
            return getRuleContext(Cel_stmtContext.class, i);
        }

        public List<ErrorContext> error() {
            return getRuleContexts(ErrorContext.class);
        }

        public ErrorContext error(int i) {
            return getRuleContext(ErrorContext.class, i);
        }

        public ParseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parse;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitParse(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParseContext parse() throws RecognitionException {
        ParseContext _localctx = new ParseContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_parse);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_DECLARE) | (1L << K_SELECT) | (1L << UNEXPECTED_CHAR))) != 0)) {
                    {
                        setState(80);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case K_DECLARE:
                            case K_SELECT: {
                                setState(78);
                                cel_stmt();
                            }
                            break;
                            case UNEXPECTED_CHAR: {
                                setState(79);
                                error();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(84);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(85);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ErrorContext extends ParserRuleContext {
        public Token UNEXPECTED_CHAR;

        public TerminalNode UNEXPECTED_CHAR() {
            return getToken(CELParser.UNEXPECTED_CHAR, 0);
        }

        public ErrorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_error;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitError(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ErrorContext error() throws RecognitionException {
        ErrorContext _localctx = new ErrorContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_error);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(87);
                ((ErrorContext) _localctx).UNEXPECTED_CHAR = match(UNEXPECTED_CHAR);

                throw new RuntimeException("UNEXPECTED_CHAR=" + (((ErrorContext) _localctx).UNEXPECTED_CHAR != null ? ((ErrorContext) _localctx).UNEXPECTED_CHAR.getText() : null));

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Cel_stmtContext extends ParserRuleContext {
        public Cel_queryContext cel_query() {
            return getRuleContext(Cel_queryContext.class, 0);
        }

        public Cel_declarationContext cel_declaration() {
            return getRuleContext(Cel_declarationContext.class, 0);
        }

        public Cel_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cel_stmt;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitCel_stmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Cel_stmtContext cel_stmt() throws RecognitionException {
        Cel_stmtContext _localctx = new Cel_stmtContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_cel_stmt);
        try {
            setState(92);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case K_SELECT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(90);
                    cel_query();
                }
                break;
                case K_DECLARE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(91);
                    cel_declaration();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Cel_declarationContext extends ParserRuleContext {
        public Event_declarationContext event_declaration() {
            return getRuleContext(Event_declarationContext.class, 0);
        }

        public Stream_declarationContext stream_declaration() {
            return getRuleContext(Stream_declarationContext.class, 0);
        }

        public Cel_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cel_declaration;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitCel_declaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Cel_declarationContext cel_declaration() throws RecognitionException {
        Cel_declarationContext _localctx = new Cel_declarationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_cel_declaration);
        try {
            setState(96);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(94);
                    event_declaration();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(95);
                    stream_declaration();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Event_declarationContext extends ParserRuleContext {
        public TerminalNode K_DECLARE() {
            return getToken(CELParser.K_DECLARE, 0);
        }

        public TerminalNode K_EVENT() {
            return getToken(CELParser.K_EVENT, 0);
        }

        public Event_nameContext event_name() {
            return getRuleContext(Event_nameContext.class, 0);
        }

        public Attribute_dec_listContext attribute_dec_list() {
            return getRuleContext(Attribute_dec_listContext.class, 0);
        }

        public Event_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_event_declaration;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitEvent_declaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Event_declarationContext event_declaration() throws RecognitionException {
        Event_declarationContext _localctx = new Event_declarationContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_event_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(K_DECLARE);
                setState(99);
                match(K_EVENT);
                setState(100);
                event_name();
                setState(101);
                match(T__0);
                setState(102);
                attribute_dec_list();
                setState(103);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Attribute_dec_listContext extends ParserRuleContext {
        public List<Attribute_declarationContext> attribute_declaration() {
            return getRuleContexts(Attribute_declarationContext.class);
        }

        public Attribute_declarationContext attribute_declaration(int i) {
            return getRuleContext(Attribute_declarationContext.class, i);
        }

        public Attribute_dec_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attribute_dec_list;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitAttribute_dec_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Attribute_dec_listContext attribute_dec_list() throws RecognitionException {
        Attribute_dec_listContext _localctx = new Attribute_dec_listContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_attribute_dec_list);
        int _la;
        try {
            setState(114);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    enterOuterAlt(_localctx, 1);
                {
                }
                break;
                case IDENTIFIER:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(106);
                    attribute_declaration();
                    setState(111);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__2) {
                        {
                            {
                                setState(107);
                                match(T__2);
                                setState(108);
                                attribute_declaration();
                            }
                        }
                        setState(113);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Attribute_declarationContext extends ParserRuleContext {
        public Attribute_nameContext attribute_name() {
            return getRuleContext(Attribute_nameContext.class, 0);
        }

        public DatatypeContext datatype() {
            return getRuleContext(DatatypeContext.class, 0);
        }

        public Attribute_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_attribute_declaration;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor)
                return ((CELVisitor<? extends T>) visitor).visitAttribute_declaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Attribute_declarationContext attribute_declaration() throws RecognitionException {
        Attribute_declarationContext _localctx = new Attribute_declarationContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_attribute_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                attribute_name();
                setState(117);
                datatype();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DatatypeContext extends ParserRuleContext {
        public DatatypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_datatype;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitDatatype(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DatatypeContext datatype() throws RecognitionException {
        DatatypeContext _localctx = new DatatypeContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_datatype);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Stream_declarationContext extends ParserRuleContext {
        public TerminalNode K_DECLARE() {
            return getToken(CELParser.K_DECLARE, 0);
        }

        public TerminalNode K_STREAM() {
            return getToken(CELParser.K_STREAM, 0);
        }

        public Stream_nameContext stream_name() {
            return getRuleContext(Stream_nameContext.class, 0);
        }

        public Event_listContext event_list() {
            return getRuleContext(Event_listContext.class, 0);
        }

        public Stream_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stream_declaration;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitStream_declaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Stream_declarationContext stream_declaration() throws RecognitionException {
        Stream_declarationContext _localctx = new Stream_declarationContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_stream_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                match(K_DECLARE);
                setState(122);
                match(K_STREAM);
                setState(123);
                stream_name();
                setState(124);
                match(T__0);
                setState(125);
                event_list();
                setState(126);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Event_listContext extends ParserRuleContext {
        public List<Event_nameContext> event_name() {
            return getRuleContexts(Event_nameContext.class);
        }

        public Event_nameContext event_name(int i) {
            return getRuleContext(Event_nameContext.class, i);
        }

        public Event_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_event_list;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitEvent_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Event_listContext event_list() throws RecognitionException {
        Event_listContext _localctx = new Event_listContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_event_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(128);
                event_name();
                setState(133);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(129);
                            match(T__2);
                            setState(130);
                            event_name();
                        }
                    }
                    setState(135);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Cel_queryContext extends ParserRuleContext {
        public TerminalNode K_SELECT() {
            return getToken(CELParser.K_SELECT, 0);
        }

        public Result_valuesContext result_values() {
            return getRuleContext(Result_valuesContext.class, 0);
        }

        public TerminalNode K_WHERE() {
            return getToken(CELParser.K_WHERE, 0);
        }

        public Cel_patternContext cel_pattern() {
            return getRuleContext(Cel_patternContext.class, 0);
        }

        public Selection_strategyContext selection_strategy() {
            return getRuleContext(Selection_strategyContext.class, 0);
        }

        public TerminalNode K_FROM() {
            return getToken(CELParser.K_FROM, 0);
        }

        public Stream_listContext stream_list() {
            return getRuleContext(Stream_listContext.class, 0);
        }

        public TerminalNode K_PARTITION() {
            return getToken(CELParser.K_PARTITION, 0);
        }

        public List<TerminalNode> K_BY() {
            return getTokens(CELParser.K_BY);
        }

        public TerminalNode K_BY(int i) {
            return getToken(CELParser.K_BY, i);
        }

        public Partition_listContext partition_list() {
            return getRuleContext(Partition_listContext.class, 0);
        }

        public TerminalNode K_WITHIN() {
            return getToken(CELParser.K_WITHIN, 0);
        }

        public Time_windowContext time_window() {
            return getRuleContext(Time_windowContext.class, 0);
        }

        public TerminalNode K_CONSUME() {
            return getToken(CELParser.K_CONSUME, 0);
        }

        public Consumption_policyContext consumption_policy() {
            return getRuleContext(Consumption_policyContext.class, 0);
        }

        public Cel_queryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cel_query;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof CELVisitor) return ((CELVisitor<? extends T>) visitor).visitCel_query(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Cel_queryContext cel_query() throws RecognitionException {
        Cel_queryContext _localctx = new Cel_queryContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_cel_query);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(136);
                match(K_SELECT);
                setState(138);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_ALL) | (1L << K_LAST) | (1L << K_MAX) | (1L << K_NEXT) | (1L << K_STRICT))) != 0)) {
                    {
                        setState(137);
                        selection_strategy();
                    }
                }

                setState(140);
                result_values();
                setState(143);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_FROM) {
                    {
                        setState(141);
                        match(K_FROM);
                        setState(142);
                        stream_list();
                    }
                }

                setState(145);
                match(K_WHERE);
                setState(146);
                cel_pattern(0);
                setState(150);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_PARTITION) {
                    {
                        setState(147);
                        match(K_PARTITION);
                        setState(148);
                        match(K_BY);
                        setState(149);
                        partition_list();
                    }
                }

                setState(154);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_WITHIN) {
                    {
                        setState(152);
                        match(K_WITHIN);
                        setState(153);
                        time_window();
                    }
                }
